Small Fix for Tracker viewer

--- a/app/views/register/show.html.erb
+++ b/app/views/register/show.html.erb
@@ -1,6 +1,6 @@
 <% @user.each do |user| %>
     <br>
-    <br> User: <% if user.email %> <%= user.email %>  <% else %> <%= user.userid %> <%end%>
+    <br> User: <% if user.email %> <%= user.email %>  <% else %> <%= user.id %> <%end%>
     <br>
     <table class="table">
       <tr>
